Style the header and use flex-grow + overflow on main to keep header and footer fixed

--- a/html/styles/main.css
+++ b/html/styles/main.css
@@ -1,10 +1,23 @@
 body {
   display: flex;
   flex-direction: column;
+  font-size: 1.1rem;
+  height: 100vh;
+}
+
+header {
+  padding: 0.5em 1em;
+  background-color: #cccccc;
+}
+
+nav {
+  display: flex;
+  gap: 2em;
 }
 
 main {
   flex-grow: 1;
+  overflow: auto;
 }
 
 footer {
